harden and refine industrial inspection platform